static/scss/components/filter-bar.scss
@import "libs/protocol/css/components/forms/choice.scss";

.c-filter {
    display: flex;
    align-items: center;
    margin-bottom: $spacing-md;
    position: relative;

    .c-filter-search-form {

        &.is-hidden {
            display: none;
        }
    }
    
    &.is-search-visible {
        margin-bottom: 4.5rem;
        position: relative;

        .c-filter-search-form {
            display: block;
            position: absolute;
            width: 100%;
            top: calc(100% + 1rem);
            
        }
        
        .c-filter-search-input {
            width: 100%;
        }
    }
    

    @media screen and (min-width: 768px) {
        justify-content: flex-end;

        &.is-search-visible {
            margin-bottom: $spacing-md;
            
            .c-filter-search-form {
                width: auto;
                position: relative;
                top: auto;
            }
        }
    }
}

// Search Bar
.c-filter-search {

    form {
        display: none;
        position: relative;
    }

    .c-filter-search-input {
        background-image: url("/static/images/icon-search.svg");
        margin-bottom: 0;
        padding-right: 90px;
        position: relative;
        z-index: 0;

        &.is-filtered + .c-filter-search-controls {
            opacity: 1;
        }

        &:focus + .c-filter-search-controls {
            opacity: 1;
        }

        &:focus, &:hover {
            background-image: url("/static/images/icon-search-blue.svg");
        }
    }

    .c-filter-search-controls {
        position: absolute;
        right: $spacing-sm;
        display: flex;
        align-items: center;
        height: 100%;
        top: 0;
        z-index: 1;
        opacity: 0;
        transition: opacity .2s ease-out;
    }

    .c-filter-case-count {
        display: flex;
        margin-right: $spacing-sm;
        align-items: center;
        height: 100%;
        transition: opacity .2s ease-out;
    }

    @media #{$mq-md} {
        align-self: flex-start;
        margin-right: auto;

        form {
            display: block;
        }

        .c-filter-icon {
            display: none;
        }
    }
}

.c-filter-action {
    margin-left: auto;

    @media #{$mq-md} {
        margin-left: $spacing-md;
    }
}

.c-filter-icon {
    width: 2.25rem;
    height: 2.25rem;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 100%;
    cursor: pointer;
    background-position: center;
    background-size: auto 1.25rem;
    background-repeat: no-repeat;
    
    &.is-enabled, &:hover {
        background-color: $color-white;
        color: $color-blue-50;
    }

}

.c-filter-icon-search {
    background-size: auto 1.25rem;
    background-image: url("/static/images/icon-search.svg");

    &.is-enabled, &:hover {
        background-image: url("/static/images/icon-search-blue.svg");        
    }
}

.c-filter-icon-calendar {
    background-image: url("/static/images/icon-calendar.svg");

    &.is-enabled, &:hover {
        background-image: url("/static/images/icon-calendar-blue.svg");        
    }
}

.c-filter-icon-filter {
    background-image: url("/static/images/icon-filter.svg");
           
    &.is-enabled, &:hover, .is-filtered-by-category & {
        background-image: url("/static/images/icon-filter-blue.svg");        
    }

    .is-filtered-by-category & {
        background-color: $color-white;
        color: $color-blue-50;
    }

    &.is-enabled + .c-filter-category-list {
        display: block;
    }
}

.c-filter-date, .c-filter-category {
    margin-left: $spacing-xs;
}

.c-filter-reset {
    background-color: $color-light-gray-40;
    border-radius: 100%;
    width: 1.5rem;
    height: 1.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    outline: 0;
    appearance: none;
    border: 0;
    position: relative;
    padding: 0;

    img {
        width: 1rem;
        display: block;
    }
}

// Category Filter
.c-filter-category {
    @media #{$mq-md} {
        position: relative;    
    }
}

.c-filter-category-list {
    display: none;
    position: absolute;
    left: 0;
    width: 100%;
    top: calc(100% + #{$spacing-md});
    background-color: $color-white;
    box-shadow: $box-shadow-sm;
    z-index: 1;
    padding: 0;
    border-radius: $border-radius-md;
    
    @media #{$mq-md} {
        top: calc(100% + #{$spacing-sm});
        left: -$spacing-lg;
        width: 270px
    }
}

.c-filter-category-type {
    padding: $spacing-md $spacing-md ;
    border-bottom: 1px solid $color-grey-10;

    .mzp-c-choices {
        padding-bottom: 0;

        .mzp-c-choice {
            padding-bottom: 0;
        }
    }

    .mzp-c-choice-label {
        padding-top: 0;
    }
}

.c-filter-category-buttons {
    padding: 0 $spacing-md $spacing-md;
    width: 100%;
    display: flex;
    justify-content: space-between;
}

